# task-timr

./: .deployignore  .dockerignore  .env.example  .gitignore  .replit  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE  README.Developer Guide.md  README.User Guide.md  README.md  app.py  config.py  create_docker_container.sh  deploy-systemd.sh  error_handler.py  main.py  package-lock.json  package.json  pyproject.toml  raw_timr_responses.py  run_all_tests.sh  run_tests.py  setup.sh  start.sh  test_summary_report.py  timr_api.py  timr_utils.py  utils.py  verify-deployment.sh  working_time_utils.py
attached_assets/: Pasted--Ten-Laws-for-Unit-Tests-Which-Must-be-Followed-1-Test-the-real-thing-Call-production-co-1748383074603.txt  Pasted--Your-Task-Worktime-Focussed-Frontend-for-Timr-com-Main-Guideline-If-something-does-not-work--1745695953078.txt  timr_api_0_2_11_openapi_v3.md
doc/: README.Developer Guide.md  README.Testing Guide.md  README.User Guide.md  README.md
templates/: base.html  index.html
tests/: test_app_comprehensive.py  test_app_date_filtering.py  test_app_date_parameter_handling.py  test_app_endpoints.py  test_app_incremental_updates.py  test_app_ongoing_working_time_protection.py  test_app_sanitization.py  test_app_sorting_functionality.py  test_app_utils.py  test_comprehensive_mock_validation.py  test_config.py  test_enhanced_error_logging.py  test_error_handler.py  test_error_handler_stacktrace.py  test_timr_api.py  test_timr_api_integration.py  test_timr_api_integration_broken.py  test_timr_api_integration_enhanced.py  test_timr_api_integration_fixed.py  (+8 more)
(+27 files in other folders)
